Introduce maven modules
Signed-off-by: Nikita Eshkeev <kastolom@gmail.com>